# kairo-web

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260505_0001_initial.py  20260507_0002_workspace_is_default.py
deploy/: Caddyfile  kairo-web.service
docs/: DESIGN.md  TECH_SPEC.md
scripts/: backup.sh  seed_dev.py
src/kairo_web/: __init__.py  cli.py  config.py  db.py  main.py  models.py  paths.py  request_filters.py  utils.py  view_context.py  workspace_meta.py
src/kairo_web/routes/: __init__.py  digest.py  pages.py  settings.py  tasks.py  workspaces.py
src/kairo_web/services/: __init__.py  capture.py  digest.py  queries.py  rollover.py
src/kairo_web/static/: app.css  app.js  manifest.webmanifest
src/kairo_web/templates/: base.html  inbox.html  login.html  week.html
src/kairo_web/templates/partials/: _capture.html  _tab_badges_oob.html  _task_edit_form.html  _topbar.html  inbox_main.html  week_main.html
src/kairo_web/templates/settings/: workspaces.html
tests/: test_capture.py  test_filters.py  test_inbox.py  test_rollover.py  test_routes.py  test_settings.py  test_workspace_management.py
